force-app/main/default/objects/Admin_Security_Skill__c.object
<CustomObject>
    <description>An association between a user and their security skills</description>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Image__c</fullName>
        <formula>IMAGE(&apos;/resource/&apos;&amp;Security_Skill__r.Image_Path__c,&quot;Image not found&quot;, -1, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>Security_Skill__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Security_Skill__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image_Path__c</fullName>
        <formula>Security_Skill__r.Image_Path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>Security_Skill__r.Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Security Skill</label>
        <referenceTo>Security_Skill__c</referenceTo>
        <relationshipLabel>Admin_Security_Skills</relationshipLabel>
        <relationshipName>Security_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skill_Level__c</fullName>
        <formula>TEXT(Security_Skill__r.Skill_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Security_Skill__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Security_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Admin Security Skill</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Security Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>